force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ABN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>