force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status - HL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <color>#F3D904</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <color>#FF0000</color>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#A53711</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Unapproved</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Fraud/Dispute</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Application Incomplete</fullName>
            </value>
            <value>
                <fullName>Hold Debits</fullName>
            </value>
            <value>
                <fullName>Purge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>