force-app/main/default/objects/Account/fields/API_Capability__c.field-meta.xml
<CustomField>
    <fullName>API_Capability__c</fullName>
    <description>API capability for NPP</description>
    <label>API Capability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPP Azupay</fullName>
            </value>
            <value>
                <fullName>NPP Transacumen</fullName>
            </value>
            <value>
                <fullName>PayTo Azupay</fullName>
            </value>
            <value>
                <fullName>PayTo Transacumen</fullName>
            </value>
            <value>
                <fullName>Card Not Present</fullName>
            </value>
            <value>
                <fullName>Card Present</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Card Not Present Standalone Refund</fullName>
            </value>
            <value>
                <fullName>PayID PaymentRequest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>