force-app/main/default/objects/Account/fields/EFTPOS_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Owner_Name__c</fullName>
    <description>display the name of EFTPOS Owner Account on EFTPOS User Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EFTPOS Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>