force-app/main/default/objects/Account/fields/EFTPOS_Provider__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Provider__c</fullName>
    <description>EFTPOS Provider value, currently we have got 2 Smartpay, Quest</description>
    <label>EFTPOS Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SmartPay</fullName>
            </value>
            <value>
                <fullName>Quest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>