force-app/main/default/objects/Account/fields/EFTPOS_Relationship__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Relationship__c</fullName>
    <description>To Differentiate EFTPOS Owner and User</description>
    <label>EFTPOS Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EFTPOS Owner</fullName>
            </value>
            <value>
                <fullName>EFTPOS User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>