force-app/main/default/objects/Account/fields/Entity_types__c.field-meta.xml
<CustomField>
    <fullName>Entity_types__c</fullName>
    <description>Type of entity the business is - e.g. Sole Trader, Trust etc</description>
    <label>Entity types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved Deposit Fund</fullName>
            </value>
            <value>
                <fullName>APRA Regulated Non-Public Offer Fund</fullName>
            </value>
            <value>
                <fullName>APRA Regulated Public Offer Fund</fullName>
            </value>
            <value>
                <fullName>APRA Regulated Fund (Fund Type Unknown)</fullName>
            </value>
            <value>
                <fullName>ATO Regulated Self-Managed Superannuation Fund</fullName>
            </value>
            <value>
                <fullName>Australian Private Company</fullName>
            </value>
            <value>
                <fullName>Australian Public Company</fullName>
            </value>
            <value>
                <fullName>Cash Management Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government APRA Regulated Public Sector Fund</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government APRA Regulated Public Sector Scheme</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Cash Management Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Company</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Co-operative</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Corporate Unit Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Discretionary Investment Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Discretionary Services Management Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Discretionary Trading Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Entity</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Fixed Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Fixed Unit Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Hybrid Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Listed Public Unit Trust</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Non-Regulated Super Fund</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Other Incorporated Entity</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Other Unincorporated Entity</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Partnership</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Pooled Development Fund</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Private Company</fullName>
            </value>
            <value>
                <fullName>Commonwealth Government Public Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>