force-app/main/default/objects/Account/fields/Partner_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Logo_URL__c</fullName>
    <description>Url to partner logo loaded to documents folder (mapped from lead)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>