force-app/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>&quot;Partner Type&quot; is the same field in eWAY.</description>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>