force-app/main/default/objects/Account/fields/Registered_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Name__c</fullName>
    <description>Registered business name with ASIC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Registered Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>