force-app/main/default/objects/Account/fields/Support_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone_Number__c</fullName>
    <formula>if (ISPICKVAL(BillingCountryCode,&quot;NZ&quot;) &amp;&amp;  ISPICKVAL( Brand__c , &quot;Ezidebit&quot;) ,&quot;0800 478 483&quot;,
if (ISPICKVAL(BillingCountryCode,&quot;NZ&quot;) &amp;&amp;  ISPICKVAL( Brand__c , &quot;Eway&quot;) ,&quot;0800 392 947&quot;,
if (ISPICKVAL(BillingCountryCode,&quot;NZ&quot;),&quot;0800 478 483&quot;,
if (ISPICKVAL(BillingCountryCode,&quot;AU&quot;) &amp;&amp;  ISPICKVAL( Brand__c , &quot;Ezidebit&quot;) ,&quot;1300 763 256&quot;,
if (ISPICKVAL(BillingCountryCode,&quot;AU&quot;) &amp;&amp;  ISPICKVAL( Brand__c , &quot;Eway&quot;) ,&quot;1800 106 565&quot;,&quot;1300 763 256&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Phone Number</label>
    <type>Text</type>
</CustomField>