force-app/main/default/objects/Account/fields/Unformatted_ABN__c.field-meta.xml
<CustomField>
    <fullName>Unformatted_ABN__c</fullName>
    <description>This is unformatted version for ABN field which removes all the blank spaces and makes it queriable in apex.</description>
    <formula>SUBSTITUTE(TRIM( ABN__c ) , &apos; &apos; , &apos;&apos;)</formula>
    <label>Unformatted ABN</label>
    <type>Text</type>
</CustomField>